# calagopus-panel

./: Cargo.toml  Dockerfile.heavy  entrypoint.heavy.sh
backend/src/: main.rs
backend/src/commands/: mod.rs
backend/src/commands/extensions/: clear.rs  mod.rs
backend/src/commands/nests/: create.rs  mass_import.rs  mod.rs
backend/src/commands/users/: create.rs  disable_2fa.rs  mod.rs  reset_password.rs
backend/src/routes/api/admin/extensions/: mod.rs
backend/src/routes/api/admin/extensions/manage/: _extension_.rs  add.rs  logs.rs  mod.rs  rebuild.rs  status.rs
backend/src/routes/api/admin/nests/: eggs.rs
backend/src/routes/api/admin/nodes/_node_/servers/: transfer.rs
backend/src/routes/api/client/servers/_server_/: power.rs
backend/src/routes/api/client/servers/_server_/files/: list.rs
backend/src/routes/api/client/servers/_server_/settings/: rename.rs
database-migrator/src/commands/: migrate.rs
frontend/: package.json  pnpm-lock.yaml
frontend/public/translations/: de.json  en.json  vi.json
frontend/src/: translations.ts
frontend/src/api/admin/extensions/manage/: addExtension.ts  getExtensionBuildLogs.ts  getExtensionStatus.ts  rebuildExtensions.ts  removeExtension.ts
frontend/src/api/server/files/: loadDirectory.ts
frontend/src/elements/: ConditionalTooltip.tsx  ContextMenu.tsx  Sidebar.tsx  Table.tsx  TitleCard.tsx  Tooltip.tsx
frontend/src/elements/containers/: ServerContentContainer.tsx
frontend/src/elements/time/: EstimatedTimeArrival.tsx
frontend/src/lib/: enums.ts  time.ts
frontend/src/lib/schemas/: user.ts
frontend/src/lib/schemas/admin/: backupConfigurations.ts  databaseHosts.ts  eggConfigurations.ts  eggRepositories.ts  eggs.ts  locations.ts  mounts.ts  nests.ts  nodes.ts  oauthProviders.ts  servers.ts
frontend/src/lib/schemas/server/: files.ts  schedules.ts  settings.ts
frontend/src/pages/admin/backupConfigurations/backups/: AdminBackupConfigurationBackupRow.tsx
frontend/src/pages/admin/extensions/: AdminExtensions.tsx  ExtensionAddOverlay.tsx  ExtensionCard.tsx
frontend/src/pages/admin/extensions/modals/: BuildLogsModal.tsx
frontend/src/pages/admin/nests/eggs/: EggCreateOrUpdate.tsx
frontend/src/pages/admin/nodes/: NodeCreateOrUpdate.tsx
frontend/src/pages/admin/nodes/backups/: NodeBackupRow.tsx
frontend/src/pages/dashboard/home/: DashboardHomeGrouped.tsx  ServerGroupItem.tsx  ServerItem.tsx
frontend/src/pages/server/: WebsocketListener.tsx
frontend/src/pages/server/backups/: BackupRow.tsx
frontend/src/pages/server/console/: Console.tsx  ServerConsole.tsx
frontend/src/pages/server/files/: FileEditor.tsx  FileEditorSettings.tsx  FileImageViewerSettings.tsx  FileOperationsProgress.tsx  FileRowContextMenu.tsx  FileSettings.tsx  ServerFiles.tsx
frontend/src/pages/server/files/hooks/: useFileDragAndDrop.ts
frontend/src/pages/server/schedules/: ScheduleRow.tsx
frontend/src/pages/server/schedules/modals/: ScheduleCreateOrUpdateModal.tsx
frontend/src/pages/server/schedules/renderers/: ActionRenderer.tsx
frontend/src/pages/server/schedules/steps/: StepWaitForConsoleLine.tsx
frontend/src/pages/server/schedules/triggers/: TriggerForm.tsx
frontend/src/pages/server/settings/: RenameContainer.tsx
frontend/src/plugins/: useFileUpload.ts  useImportDragAndDrop.ts
frontend/src/providers/: AuthProvider.tsx  FileManagerProvider.tsx  ToastProvider.tsx  WindowProvider.tsx
frontend/src/providers/contexts/: fileManagerContext.ts  toastContext.ts
frontend/src/routers/guards/: ServerStateGuard.tsx
shared/: Cargo.toml
shared/src/: cache.rs  heavy.rs  lib.rs
shared/src/extensions/: mod.rs
shared/src/models/: backup_configuration.rs  database_host.rs  egg_configuration.rs  egg_repository.rs  location.rs  mount.rs  nest.rs  nest_egg.rs  oauth_provider.rs  role.rs
shared/src/models/node/: mod.rs
shared/src/models/server/: mod.rs
wings-api/src/: client.rs  extra.rs  lib.rs
