[package]
name = "shared"
license = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[dependencies]
wings-api = { workspace = true }
rule-validator = { workspace = true }
schema-extension-core = { workspace = true }
schema-extension-derive = { workspace = true }
rustis = { workspace = true }
rust-s3 = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
utoipa = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
clap = { workspace = true }
include_dir = { workspace = true }
cron = { workspace = true }
lettre = { version = "0.11.17", default-features = false, features = ["tokio1-native-tls", "builder", "pool", "smtp-transport", "sendmail-transport", "file-transport"] }
zip = { version = "8.0.0", default-features = false, features = ["deflate"] }
toml = "1.0.1"
serde = { workspace = true }
serde_json_path = "0.7.2"
serde_json = { workspace = true }
serde_norway = { workspace = true }
rmp-serde = { workspace = true }
serde-xml-rs = { workspace = true }
utoipa-axum = { workspace = true }
base32 = { workspace = true }
base64 = { workspace = true }
sqlx = { workspace = true }
webauthn-rs = { workspace = true }
jwt = "0.16.0"
async-trait = { workspace = true }
hmac = { version = "0.12.1", features = ["std"] }
chrono = { workspace = true }
chrono-tz = { workspace = true }
sha2 = { workspace = true }
dotenvy = { workspace = true }
colored = { workspace = true }
uuid = { workspace = true }
simple_crypt = "0.2.3"
cidr = { version = "0.3.1", features = ["serde"] }
garde = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }
sentry = { workspace = true }
sentry-anyhow = { workspace = true }
russh = { workspace = true }
rand = { workspace = true }
constant_time_eq = "0.4.2"
urlencoding = { workspace = true }
ignore = { version = "0.4.23", features = ["simd-accel"] }
futures-util = { workspace = true }
cap-std = "4.0.0"
semver = { workspace = true }
git2 = "0.20.2"
tempfile = { workspace = true }
compact_str = { workspace = true }
nestify = { workspace = true }
sysinfo = { workspace = true }
accept-header = "0.2.3"
mime = "0.3.17"
moka = { version = "0.12.12", features = ["future"] }
serde_with = { workspace = true }
minijinja = { workspace = true }
sntpc-net-tokio = "1.0.1"
sntpc = { version = "0.8.1", features = ["std"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
